# VOICE_CLONE_DOT_TTS

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
data/ui_checks/fake-soar-model/: config.json
docs/: IMPLEMENTATION_PLAN.md  MACOS.md  WINDOWS.md
packaging/: pyinstaller_entry.py  voice-clone-dot-tts.spec
scripts/: build_app.ps1  build_app.sh  setup_windows.ps1
src/voice_clone_dot_tts/: __init__.py  constants.py  main.py  model_manager.py  models.py  service.py  ui.py
tests/: test_model_manager.py  test_platform_paths.py  test_service.py  test_ui.py
